# Kinex

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_zh.md
.githooks/: pre-commit
.github/workflows/: ci.yml  clang-format.yml  deploy-pages.yml  python-bindings.yml  release.yml  reusable-build-wasm.yml  reusable-build-wheels.yml
benchmarks/: CMakeLists.txt  README.md  __init__.py  benchmark_visualizer.html  ik_benchmarks.cpp  oracle.py  run_benchmarks.py  run_robust_global_ik_benchmarks.py  run_tier_a_benchmarks.py  run_tier_b_benchmarks.py  urdf_generator.py  visualize_benchmarks.py
benchmarks/cpp/: ik_benchmarks.cpp
benchmarks/python/: README.md  run_all_benchmarks.py  run_benchmarks.py  run_tier_a_benchmarks.py  run_tier_b_benchmarks.py  test_binding_overhead.py
benchmarks/results/: benchmark_summary.md  cpp_benchmark_summary.md  ik_benchmarks_latest.json  ik_benchmarks_ubuntu.json  ik_benchmarks_win.json  jacobian_benchmarks_latest.json  tier_b_benchmark_results.json  ur5e+x_results.json  ur5e+xy_results.json  ur5e+xyz_results.json  ur5e_results.json  visualize.html
benchmarks/tools/: __init__.py  visualize_benchmarks.py  visualize_cpp_benchmarks.py
bindings/python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
bindings/python/benchmarks/: __init__.py  run_benchmarks.py  run_tier_b_benchmarks.py
bindings/python/kinex/: __init__.py  __init__.pyi
bindings/python/src/: bindings.cpp
bindings/python/tests/: conftest.py  test_forward_kinematics.py  test_integration.py  test_inverse_kinematics.py  test_jacobian.py  test_robot.py  test_robot_model.py  test_transform.py
bindings/wasm/: CMakeLists.txt  kinex.d.ts  package.json
bindings/wasm/cmake/: CheckWasmSize.cmake
bindings/wasm/src/: bindings.cpp
bindings/wasm/tests/browser/: module.browser.test.js
bindings/wasm/tests/manual/: index.html
bindings/wasm/tests/node/: full_bindings.test.js  module.test.js
cmake/: Dependencies.cmake  kinexConfig.cmake.in
core/: CMakeLists.txt
core/include/kinex/: export.h  global_inverse_kinematics.h  inverse_kinematics.h  kinematics.h  logging.h  robot.h  robot_model.h  urdf_parser.h
core/include/urdfx/: inverse_kinematics.h
core/src/: CMakeLists.txt  global_inverse_kinematics.cpp  inverse_kinematics.cpp  kinematics.cpp  robot.cpp  robot_model.cpp  urdf_parser.cpp
core/tests/: CMakeLists.txt  test_global_inverse_kinematics.cpp  test_inverse_kinematics.cpp  test_kinematics.cpp  test_main.cpp  test_robot.cpp  test_urdf_parser.cpp
docs/: README.md  formatting.md
docs/api/: README.md  cpp.md  python.md
docs/assets/: README.md
docs/guides/: building.md  getting-started.md  migration.md
docs/tutorials/: cpp-tutorial.md
docs/zh/: README.md
docs/zh/guides/: building.md  getting-started.md
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  forward_kinematics_example.cpp  global_ik_example.cpp
examples/javascript/: README.md  app.js  forward_kinematics.js  index.html  package.json  style.css  visualization.html  visualization.js
examples/javascript/ur5_visualizer/: README.md  app.js  index.html
examples/javascript/wasm/: kinex.js
examples/models/ur5/: ur5e+x.urdf
examples/python/: forward_kinematics.py  inverse_kinematics.py  jacobian_analysis.py  trajectory_generation.py
include/urdfx/: inverse_kinematics.h  kinematics.h
openspec/: AGENTS.md  project.md
openspec/changes/add-ci-cd-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/add-ci-cd-pipeline/specs/ci-cd-pipeline/: spec.md
openspec/changes/add-global-ik-solver/: design.md  proposal.md  tasks.md
openspec/changes/add-global-ik-solver/specs/inverse-kinematics/: spec.md
openspec/changes/add-robotics-kinematics-library/: design.md  proposal.md  tasks.md
openspec/changes/add-robotics-kinematics-library/specs/build-system/: spec.md
openspec/changes/add-robotics-kinematics-library/specs/inverse-kinematics/: spec.md
openspec/changes/add-unified-robot-api/: design.md  proposal.md  tasks.md
openspec/changes/align-benchmark-implementations/: design.md  tasks.md
openspec/changes/archive/2025-11-19-restructure-project-layout/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-20-replace-cppad-with-analytical-jacobian/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-21-add-python-bindings/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-22-add-mixed-chain-benchmark-suite/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-23-consolidate-benchmark-architecture/: architecture.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-24-align-benchmark-implementations/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-25-add-ci-cd-pipeline/: proposal.md  tasks.md
openspec/changes/archive/2025-11-27-add-robotics-kinematics-library/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-28-add-unified-robot-api/: design.md  proposal.md  tasks.md
openspec/changes/archive/add-windows-build-support/: design.md  proposal.md
openspec/changes/consolidate-benchmark-architecture/: architecture.md  proposal.md  tasks.md
openspec/changes/refactor-ik-solver-restructure/: design.md  proposal.md  tasks.md
openspec/changes/replace-cppad-with-analytical-jacobian/: proposal.md
openspec/specs/benchmark-infrastructure/: spec.md
openspec/specs/ci-cd-pipeline/: spec.md
openspec/specs/forward-kinematics/: spec.md
openspec/specs/inverse-kinematics/: spec.md
openspec/specs/jacobian-computation/: spec.md
openspec/specs/python-bindings/: spec.md
openspec/specs/synthetic-robot-generation/: spec.md
openspec/specs/urdf-parsing/: spec.md
openspec/specs/visualization-app/: spec.md
openspec/specs/wasm-bindings/: spec.md
scripts/: build-wasm.ps1  build-wasm.sh  format.sh  publish-npm.ps1  publish-npm.sh  setup.ps1  setup.sh
src/: CMakeLists.txt  kinematics.cpp
tests/: CMakeLists.txt  test_inverse_kinematics.cpp  test_kinematics.cpp  test_urdf_parser.cpp
(+32 files in other folders)
