[build-system]
requires = ["scikit-build-core>=0.5.0", "nanobind>=1.8.0", "numpy>=1.20"]
build-backend = "scikit_build_core.build"

[project]
name = "kinex"
dynamic = ["version"]
description = "Python bindings for kinex library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Kinex Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy~=1.20",
]

[tool.scikit-build]
cmake.source-dir = "../.."
build-dir = "build"
cmake.args = [
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DBUILD_TESTING=OFF", 
    "-DBUILD_EXAMPLES=OFF", 
    "-DBUILD_BENCHMARKS=OFF",
    "-DBUILD_WASM=OFF"
]
# Temporarily remove component filter to debug installation issue
# install.components = ["python"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../../CMakeLists.txt"
regex = 'project\(kinex\s+VERSION\s+(?P<value>\d+\.\d+\.\d+)'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

